force-app/main/default/lwc/listFiltersButton/listFiltersButton.css
.open-filter-button {
    display: inline-flex;
    color: var(--filterButtonColor);
    justify-content: center;
    align-items: center;
    height: 3em;
    width: 6em;
    padding: 0.5rem;
    border: 1px solid var(--filterButtonBorderColor);
    border-radius: 3px;
    background-color: var(--filterButtonBackgroundColor);
}

.open-filter-button:hover {
    color: #ffffff;
    background-color: #0056b4;
    border-color: transparent;
}

@media (max-width: 576px) {
    .open-filter-button {
        width: 5em;
        height: 2.5em;
    }
}

